--- a/20210702_developement_environment_setting/presentation/presentation.Rmd
+++ b/20210702_developement_environment_setting/presentation/presentation.Rmd
@@ -8,6 +8,7 @@ output:
     lib_dir: libs
     nature:
       ratio: 3508:2480
+      css : ['default', 'custom.css']
       highlightStyle: github
       highlightLines: false
       countIncrementalSlides: false
@@ -15,7 +16,7 @@ output:
 ```{r setup, include=FALSE}
 ```
 # Disclosure
-- Main langauage - python, R, go
+- Main language - python, R, go
 
 - Using Visual Studio code, R-Studio.
 
@@ -23,15 +24,16 @@ output:
 
 - I'm not a developer. I'm a doctor.
 
-- I own some stock in Microsoft.
-
 - 제가 하는 방식은 완벽하지 않으며, 반드시 이렇게 해야한다는 것은 아닙니다. 
 
 ---
 class: center, middle
 
 # Development Environment
-
+---
+class: center, middle
+# Introduction
+#### https://www.notion.so/mindong/DHLab-4c974b1303634ac9962191fe67ecf81a
 ---
 class: center, middle
 # Wireless Lan
@@ -105,11 +107,29 @@ knitr::include_graphics('figure/wsl2_architecture.png')
 
 * zsh
 
-* fish
-
-cf. .bashrc/.zshrc
+* (fish)
 
 cf. https://medium.com/harrythegreat/oh-my-zsh-iterm2%EB%A1%9C-%ED%84%B0%EB%AF%B8%EB%84%90%EC%9D%84-%EB%8D%94-%EA%B0%95%EB%A0%A5%ED%95%98%EA%B2%8C-a105f2c01bec
+
+---
+cf. .bashrc/.zshrc
+- 필요한 PATH나 alias 등록 가능
+```{bash eval=FALSE}
+# Add Visual Studio Code (code)
+export PATH="$PATH:/Applications/Visual Studio Code.app/Contents/Resources/app/bin"
+
+alias phd="cd work/phd_thesis_2021; source env/bin/activate"
+alias mimic="cd work/mimiciv"
+alias wd='cd ~/work'
+
+## server
+alias 149ssh='ssh mindong@103.22.220.149 -p10022'
+alias 153ssh='ssh mindong@103.22.220.153 -p10022'
+alias 67ssh='ssh mindong@61.252.54.67 -p10022'
+alias 76ssh='ssh mindong@61.252.54.76 -p10022'
+alias 79ssh='ssh mindong@61.252.54.79 -p10022'
+
+```
 
 ---
 # Commonly using shell command
@@ -127,6 +147,26 @@ cf. https://medium.com/harrythegreat/oh-my-zsh-iterm2%EB%A1%9C-%ED%84%B0%EB%AF%B
   - sudo !!
 
 ---
+# ssh (without password)
+### Client
+- ssh key를 만든다. - `~/.ssh` 폴더에 id_rsa(private key), id_rsa.pub(public key)가 생성된다.
+  ```{bash eval = FALSE}
+  ssh-keygen -t rsa
+  ```
+- client에서 만든 ssh public key를 서버로 복사를 한다.
+  ```{bash eval=FALSE}
+  scp -P [port] id_rsa.pub [id]@[host]:~/
+  ```
+
+### Server
+- 서버에 복사된 id_rsa.pub을 `.ssh` 폴더에 authorized_keys로 옮긴다.
+  ```{bash eval = FALSE}
+  mkdir ~/.ssh
+  chmod 700 ~/.ssh
+  cat ~/id_rsa.pub >> ~/.ssh/authorized_keys
+  ```
+
+---
 # tmux 
 - Terminal 창으로 여러개 띄울 수 있다. (한꺼번에 보는 것도 가능)
   - pane
@@ -138,6 +178,11 @@ cf. https://medium.com/harrythegreat/oh-my-zsh-iterm2%EB%A1%9C-%ED%84%B0%EB%AF%B
 ```{r fig.align='center', out.width='80%', echo = FALSE}
 knitr::include_graphics('figure/tmux_example.png')
 ```
+---
+class: middle
+```{r fig.align='center', out.width='110%', echo = FALSE}
+knitr::include_graphics('figure/tmux_cheatsheet.png')
+```
 
 ---
 # IDE
@@ -148,6 +193,8 @@ knitr::include_graphics('figure/tmux_example.png')
 - 파일 관리가 쉽다.
 - Web browser 형태가 아닌 프로그램 형태로 프로그램을 띄우기 쉽다.
 - 여러가지 extension이 있어 개발할 때 편하다.
+- Debugging
+- Test Automation
 
 ---
 # VS code
@@ -157,18 +204,19 @@ knitr::include_graphics('figure/tmux_example.png')
 
 * 원격 접속 개발
   - ssh key 이용 시 password 없이 접속 가능 
-  
+  ```{bash eval = FALSE}
+  Host 103.22.220.153
+  	HostName 103.22.220.153
+  	User mindong
+  	Port 10022
+  	IdentityFile ~/.ssh/id_rsa
+  ```
 * 여러가지 단축키
   - `alt` + `위`/`아래`
   - `alt` + `shift` `위`/`아래`
   - `ctrl`/`cmd` + `d` - 같은 것 선택
   - `ctrl`/`cmd` + / - 주석처리
 
----
-class: center, middle
-
-### 조금만 관심을 가지고 찾아보면 
-### 인생을 조금 더 편하게 살 수 있습니다.
 ---
 class: center, middle
 # Project Management
@@ -205,8 +253,10 @@ c.f. https://github.com/mdsung/2020_KISA_blockchain_survey
 
 ---
 # [Python] Project
-- Make virtualenvironment to set your project
+- Make virtual environment to set your project
   - `python -m venv env`
+  - `env/bin/activate`
+  - `deactivate`
   
 - Save your dependencies in the txt file
   - `pip freeze > requirements.txt`
@@ -227,7 +277,7 @@ c.f. https://github.com/mdsung/2020_KISA_blockchain_survey
 
 ---
 # git / github
-- version 관리 프로그램
+- version 관리
 - code 백업
 - (협업?)
 - project별로 repository를 구성하면 webpage에서 분석 결과를 쉽게 확인할 수 있다. 
@@ -235,15 +285,25 @@ c.f. https://github.com/mdsung/2020_KISA_blockchain_survey
 c.f. https://github.com/mdsung/2021_scRNA_PMBC_replicate
 
 ---
-# `code` 관리
-- code는 하나의 일을 하는 것이 좋다 
+# code 관리
+- code는 하나의 일을 하는 것이 좋다. (input -> output)
 - naming은 항상 중요하다.
 
   e.g. create_preprocess_dataset.R 
   e.g. create_figure1.R
   
 ---
-# `data/processed` 관리
+# data/raw 관리
+- raw 파일은 절대로 무슨일이 있더라도 건드리지 않는다. 
+- 필요하다면 복사해서 진행을 하고,
+- 코드로 항상 기록을 남기자
+
+- 가능하다면 raw file은 저장소에서 가져오는 방식을 이용한다. 
+
+e.g. https://github.com/mdsung/2021_scRNA_PMBC_replicate/blob/master/code/cngb_download.sh
+---
+# data/processed 관리
+- Intermediate, result files
 - Use `feather` file
   - `feather` format can be read in both R and Python.
   - c.f `RDS` format is the way faster than `feather`.
@@ -264,8 +324,9 @@ env/
 data/raw/
 **/__pycache__/
 .DS_Store
-
 ```
+e.g. https://github.com/mdsung/2021_ICU_Sepsis_Prospective/blob/main/.gitignore
+
 ---
 # github 기본 이용법
 - `git init` / `git clone`
@@ -273,7 +334,24 @@ data/raw/
 - `git commit -m "first commit"`
 - `git push`
 - `git pull`
+---
+```{r echo = FALSE, fig.align = 'center', out.width='100%'}
+knitr::include_graphics('figure/git_diagram.png')
+```
+---
+# Git 기본 환경 설정하기
 
+```{bash eval = FALSE}
+git config --global user.email "mdskylover@gmail.com"
+git config --global user.name "mdsung"
+git config --global core.editor "code --wait" # git 에서 사용하는 기본 editor를 vim으로 설정하기
+```
 ---
 # Others...
-- `Makefile` - save your work process
+- `Makefile` - save your work process (from download raw data to write manuscript)
+
+e.g. https://github.com/mdsung/2021_ICU_Sepsis_Prospective/blob/main/Makefile
+e.g. https://github.com/mdsung/2020_KISA_blockchain_survey/blob/main/Makefile
+---
+class: center, middle
+# Lets Start the Project
